--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.example.mitsuhori_y.flexapp.presentation.MainActivity">
+    tools:context="jp.co.flexapp.presentation.activity.MainActivity">
 
     <include layout="@layout/tab" />
 
