--- a/app/src/main/res/layout/fragment_page.xml
+++ b/app/src/main/res/layout/fragment_page.xml
@@ -1,13 +1,43 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="jp.co.flexapp.presentation.fragment.PageFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <jp.co.flexapp.presentation.customVIew.TwitterListView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="wrap_content" />
 
-</FrameLayout>
+    <jp.co.flexapp.presentation.customVIew.TwitterListView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <jp.co.flexapp.presentation.customVIew.TwitterListView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <jp.co.flexapp.presentation.customVIew.TwitterListView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <jp.co.flexapp.presentation.customVIew.TwitterListView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <jp.co.flexapp.presentation.customVIew.TwitterListView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <jp.co.flexapp.presentation.customVIew.TwitterListView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <jp.co.flexapp.presentation.customVIew.TwitterListView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <jp.co.flexapp.presentation.customVIew.TwitterListView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+</LinearLayout>
