--- a/app/src/main/res/layout/twitter_list_component.xml
+++ b/app/src/main/res/layout/twitter_list_component.xml
@@ -24,14 +24,14 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
-            android:text="Mr,PotatoHead" />
+            android:text="" />
 
         <TextView
             android:id="@+id/twitter_tweet"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="4"
-            android:text="hogehogehoehoegheoghoeghoeghoeghoehghgeoheoge" />
+            android:text="" />
 
     </LinearLayout>
 
