--- a/app/src/main/res/layout/fragment_twitter_page.xml
+++ b/app/src/main/res/layout/fragment_twitter_page.xml
@@ -3,19 +3,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="jp.co.flexapp.presentation.fragment.TwitterPageFragment"
-    tools:showIn="@layout/activity_main">
+    tools:context="jp.co.flexapp.presentation.fragment.TwitterPageFragment">
 
-    <!--ListView
-        android:id="@+id/listView"
+    <ListView
+        android:id="@+id/twitter_list_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"></ListView-->
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Twitter" />
+        android:layout_centerVertical="true"></ListView>
 
 </LinearLayout>
