--- a/app/src/main/res/layout/twitter_list_component.xml
+++ b/app/src/main/res/layout/twitter_list_component.xml
@@ -19,12 +19,30 @@
         android:layout_weight="3"
         android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/twitter_username"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
-            android:text="" />
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/twitter_username"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="2dp"
+                android:layout_weight="1"
+                android:text="" />
+
+            <TextView
+                android:id="@+id/twitter_createdAt"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_marginRight="2dp"
+                android:layout_weight="1"
+                android:gravity="right|bottom"
+                android:text=""
+                android:textSize="10dp" />
+        </LinearLayout>
 
         <TextView
             android:id="@+id/twitter_tweet"
