--- a/app/src/main/res/layout/fragment_fb_page.xml
+++ b/app/src/main/res/layout/fragment_fb_page.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     tools:context="jp.co.flexapp.presentation.fragment.FbPageFragment">
 
-    <com.facebook.login.widget.LoginButton
+    <!--com.facebook.login.widget.LoginButton
         android:id="@+id/fb_login_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -12,5 +12,11 @@
         android:layout_margin="4dp"
         android:gravity="center"
         android:paddingBottom="12dp"
-        android:paddingTop="12dp" />
+        android:paddingTop="12dp" /-->
+
+    <Button
+        android:id="@+id/fb_login_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="facebookログイン" />
 </FrameLayout>
