--- a/app/src/main/res/layout/fragment_fb_page.xml
+++ b/app/src/main/res/layout/fragment_fb_page.xml
@@ -18,5 +18,6 @@
         android:id="@+id/fb_login_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal|center_vertical"
         android:text="facebookログイン" />
 </FrameLayout>
