--- a/app/src/main/res/layout/fragment_fb_page.xml
+++ b/app/src/main/res/layout/fragment_fb_page.xml
@@ -19,5 +19,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal|center_vertical"
-        android:text="facebookログイン" />
+        android:text="facebookログイン"
+        android:visibility="gone" />
+
+    <ProgressBar
+        android:id="@+id/fb_progress_bar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal|center_vertical"
+        android:visibility="gone" />
+
 </FrameLayout>
