--- a/app/src/main/res/layout/fragment_fb_page.xml
+++ b/app/src/main/res/layout/fragment_fb_page.xml
@@ -4,15 +4,12 @@
     android:layout_height="match_parent"
     tools:context="jp.co.flexapp.presentation.fragment.FbPageFragment">
 
-    <!--com.facebook.login.widget.LoginButton
-        android:id="@+id/fb_login_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical|center_horizontal"
-        android:layout_margin="4dp"
-        android:gravity="center"
-        android:paddingBottom="12dp"
-        android:paddingTop="12dp" /-->
+    <ListView
+        android:id="@+id/fb_list_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"></ListView>
 
     <Button
         android:id="@+id/fb_login_btn"
