--- a/app/src/main/res/layout/fragment_fb_page.xml
+++ b/app/src/main/res/layout/fragment_fb_page.xml
@@ -9,7 +9,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"></ListView>
+        android:layout_centerVertical="true"
+        android:visibility="gone"></ListView>
 
     <Button
         android:id="@+id/fb_login_btn"
