--- a/app/src/main/res/layout/fragment_insta_page.xml
+++ b/app/src/main/res/layout/fragment_insta_page.xml
@@ -6,8 +6,11 @@
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Instagram" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal|center_vertical"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
+        android:text="Instagramは審査が通らないとAPIが使用できないので、実装できません" />
 
 </FrameLayout>
