--- a/app/src/main/res/layout/twitter_list_component.xml
+++ b/app/src/main/res/layout/twitter_list_component.xml
@@ -2,55 +2,58 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/twitter_list_component"
     android:layout_width="match_parent"
-    android:layout_height="100dp"
+    android:layout_height="wrap_content"
     android:gravity="center"
-    android:orientation="horizontal">
-
-    <ImageView
-        android:id="@+id/twitter_thumb"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:src="@drawable/sample_thumb" />
+    android:orientation="vertical"
+    android:paddingBottom="5dp"
+    android:paddingTop="5dp">
 
     <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="3"
-        android:orientation="vertical">
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/twitter_thumb"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:src="@drawable/sample_thumb" />
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:orientation="horizontal">
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="6"
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/twitter_username"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
                 android:layout_marginLeft="2dp"
-                android:layout_weight="1"
+                android:layout_weight="5"
                 android:text="" />
 
             <TextView
                 android:id="@+id/twitter_createdAt"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
                 android:layout_marginRight="2dp"
                 android:layout_weight="1"
                 android:gravity="right|bottom"
                 android:text=""
                 android:textSize="10dp" />
+
         </LinearLayout>
 
-        <TextView
-            android:id="@+id/twitter_tweet"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="4"
-            android:text="" />
-
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/twitter_tweet"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="4"
+        android:text="" />
 
 </LinearLayout>
