--- a/app/src/main/res/layout/fragment_twitter_page.xml
+++ b/app/src/main/res/layout/fragment_twitter_page.xml
@@ -10,7 +10,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"></ListView>
+        android:layout_centerVertical="true"
+        android:background="@color/cardview_light_background"
+        android:divider="@null"></ListView>
 
     <ProgressBar
         android:id="@+id/progressBar"
