--- a/app/src/main/res/layout/twitter_list_component.xml
+++ b/app/src/main/res/layout/twitter_list_component.xml
@@ -3,6 +3,9 @@
     android:id="@+id/twitter_list_component"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginBottom="10dp"
+    android:layout_marginTop="10dp"
+    android:background="@drawable/com_facebook_tooltip_blue_background"
     android:gravity="center"
     android:orientation="vertical"
     android:paddingBottom="5dp"
@@ -18,12 +21,14 @@
             android:id="@+id/twitter_thumb"
             android:layout_width="0dp"
             android:layout_height="match_parent"
+            android:layout_marginTop="5dp"
             android:layout_weight="1"
             android:src="@drawable/sample_thumb" />
 
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
             android:layout_weight="6"
             android:orientation="vertical">
 
@@ -39,7 +44,7 @@
                 android:id="@+id/twitter_createdAt"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_marginRight="2dp"
+                android:layout_marginRight="5dp"
                 android:layout_weight="1"
                 android:gravity="right|bottom"
                 android:text=""
@@ -53,6 +58,9 @@
         android:id="@+id/twitter_tweet"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_marginBottom="10dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
         android:layout_weight="4"
         android:text="" />
 
